--- a/ImageUploaderForIG/package.json
+++ b/ImageUploaderForIG/package.json
@@ -10,6 +10,7 @@
     "name": "y.li"
   },
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
